# project_euler

./: .gitignore  Cargo.toml
Files/: ten.txt
crates/common/src/: lib.rs  macros.rs  number_series.rs  shape_numbers.rs  sieve.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/one_hundred/: Cargo.toml
crates/one_hundred/src/: lib.rs
crates/one_hundred/src/eighties/: eighty.rs  eighty_eight.rs  eighty_five.rs  eighty_four.rs  eighty_nine.rs  eighty_one.rs  eighty_seven.rs  eighty_six.rs  eighty_three.rs  eighty_two.rs  mod.rs
crates/one_hundred/src/fifties/: fifty.rs  fifty_eight.rs  fifty_five.rs  fifty_four.rs  fifty_nine.rs  fifty_one.rs  fifty_seven.rs  fifty_six.rs  fifty_three.rs  fifty_two.rs  mod.rs
crates/one_hundred/src/forties/: forty.rs  forty_four.rs  (+8 more)
crates/two_hundred/: Cargo.toml
crates/two_hundred/src/: lib.rs
src/: common.rs  file_parsers.rs  lib.rs  macros.rs  main.rs  problems.rs  utilities.rs
src/common/: mod.rs  number_series copy.rs  number_series.rs
src/problems/: one_hundred.rs
src/problems/one_hundred/: eight.rs  eighteen.rs  eleven.rs  fifteen.rs  fifty.rs  fifty_one.rs  fifty_two.rs  five.rs  forty.rs  forty_eight.rs  forty_four.rs  forty_nine.rs  forty_seven.rs  forty_six.rs  forty_three.rs  forty_two.rs  four.rs  fourteen.rs  mod.rs  nine.rs  nineteen.rs  seven.rs  seventeen.rs  six.rs  sixteen.rs  ten.rs  thirteen.rs  thirty.rs  thirty_eight.rs  thirty_five.rs  thirty_four.rs  thirty_nine.rs  thirty_one.rs  thirty_seven.rs  thirty_six.rs  thirty_three.rs  thirty_two.rs  twelve.rs  twenty.rs  twenty_eight.rs  (+9 more)
(+185 files in other folders)
