[package]
name = "project_euler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
one_hundred = { path = "./crates/one_hundred" }
two_hundred = { path = "./crates/two_hundred/"}

[profile.release]
debug = true

[workspace]
members = ["crates/common", "crates/one_hundred", "crates/two_hundred"]
